--- a/src/app/account/landing-reset-password/landing-reset-password.component.html
+++ b/src/app/account/landing-reset-password/landing-reset-password.component.html
@@ -3,23 +3,23 @@
         <mat-card class="register-card">
 
             <mat-card-content>
-                <h2>Passwort ändern</h2>
-                <h3>Gebe dein neues Passwort ein
+                <h2>password ändern</h2>
+                <h3>Gebe dein neues password ein
                 </h3>
             </mat-card-content>
             <form class="register-form" (ngSubmit)="submitForm()">
                 <mat-form-field>
                     <mat-label>Enter your password</mat-label>
-                    <input matInput [type]="hide ? 'password' : 'text'" required [formControl]="passwort1">
-                    @if (passwort1.invalid) {<mat-error>{{getErrorMessagePasswort1()}}</mat-error>}
-                    @if (passwort1.valid) { <mat-icon matSuffix>check</mat-icon>}
+                    <input matInput [type]="hide ? 'password' : 'text'" required [formControl]="password1">
+                    @if (password1.invalid) {<mat-error>{{getErrorMessagepassword1()}}</mat-error>}
+                    @if (password1.valid) { <mat-icon matSuffix>check</mat-icon>}
                     <mat-hint>{{password_incorrect}}</mat-hint>
                 </mat-form-field>
                 <mat-form-field>
                     <mat-label>Enter your password again</mat-label>
-                    <input matInput [type]="hide ? 'password' : 'text'" required [formControl]="passwort2">
-                    @if (passwort2.invalid) {<mat-error>{{getErrorMessagePasswort2()}}</mat-error>}
-                    @if (passwort2.valid) { <mat-icon matSuffix>check</mat-icon>}
+                    <input matInput [type]="hide ? 'password' : 'text'" required [formControl]="password2">
+                    @if (password2.invalid) {<mat-error>{{getErrorMessagepassword2()}}</mat-error>}
+                    @if (password2.valid) { <mat-icon matSuffix>check</mat-icon>}
                     <mat-hint>{{password_incorrect}}</mat-hint>
                 </mat-form-field>
                 <p>Verwende mindestens acht Zeichen (Groß- und Kleinschreibung beachten) mit mindestens einer Zahl sowie
