--- a/src/app/content/serch/serch.component.html
+++ b/src/app/content/serch/serch.component.html
@@ -3,40 +3,25 @@
 <form class="example-form">
     <mat-form-field class="example-full-width">
         <mat-label>Title, Charakter oder Genre suchen</mat-label>
-        <input matInput placeholder="Title, Charakter oder Genre suchen">
+        <input matInput placeholder="Title, Charakter oder Genre suchen" [(ngModel)]="key" name="search"
+            (input)="filterData()">
     </mat-form-field>
 </form>
 
-<div class="content">
+<div *ngIf="filteredData.length > 0; else noResults" class="content">
     <div class="content-boxing ">
         <div class="content-draggable" id="content-box">
-            <div class="content-box">
-                <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
-            </div>
-            <div class="content-box">
-                <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
-            </div>
-            <div class="content-box">
-                <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
-            </div>
-            <div class="content-box">
-                <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
-            </div>
-            <div class="content-box">
-                <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
-            </div>
-            <div class="content-box">
-                <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
-            </div>
-            <div class="content-box">
-                <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
-            </div>
-            <div class="content-box">
-                <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
+            <div class="content-draggable" id="content-box">
+                <div *ngFor="let single of filteredData" class="content-box">
+                    <a href="/single-view/?select={{single.random_key}}"><img src="{{single.cover}}" alt=""></a>
+                </div>
             </div>
         </div>
     </div>
 </div>
+<ng-template #noResults>
+    <p>Nichts gefunden.</p>
+</ng-template>
 
 
 <app-footer></app-footer>
