--- a/src/app/module/category/category-header/category-header.component.html
+++ b/src/app/module/category/category-header/category-header.component.html
@@ -1,20 +1,20 @@
 <div class="category">
     <div class="category-box">
-        <a href="">Deine</a>
+        <a href="/my">Meine</a>
     </div>
     <div class="category-box">
-        <a href="">Filme</a>
+        <a href="/movies">Filme</a>
     </div>
     <div class="category-box">
-        <a href="">Serien</a>
+        <a href="/series">Serien</a>
     </div>
     <div class="category-box">
-        <a href="">Natur</a>
+        <a href="/nature">Natur</a>
     </div>
     <div class="category-box">
-        <a href="">Lustiges</a>
+        <a href="/funny">Lustiges</a>
     </div>
     <div class="category-box">
-        <a href="">Wissen</a>
+        <a href="/knowledge">Wissen</a>
     </div>
 </div>
