--- a/src/app/module/category/category-header/category-header.component.scss
+++ b/src/app/module/category/category-header/category-header.component.scss
@@ -14,9 +14,9 @@
   justify-content: center;
   align-items: center;
   padding: 10px;
-  width: 15%;
+
   max-width: 12%;
-  min-width: 100px;
+  min-width: 120px;
   border-radius: 25px;
   box-shadow: 0px 6px 15px 5px #000000;
   aspect-ratio: 16 / 9;
@@ -40,6 +40,11 @@
     a {
       font-size: 1rem;
       transition: all 0.2s ease;
+    }
+  }
+  @media (min-width: 1200px) {
+    a {
+      font-size: 24px !important;
     }
   }
 }
