--- a/src/app/module/category/content-box.scss
+++ b/src/app/module/category/content-box.scss
@@ -42,8 +42,9 @@
   img {
     transition: all 0.2s ease-out;
     width: 100%;
-    object-fit: fill;
+    object-fit: cover;
     border-radius: 10px;
+    height: -webkit-fill-available;
 
     &:hover {
       border: 5px solid rgba(255, 255, 255, 0.5);
