--- a/src/app/module/slideshow/slideshow.component.html
+++ b/src/app/module/slideshow/slideshow.component.html
@@ -1,35 +1,28 @@
 <div class="slideshow">
-    <c-carousel [dark]="false" [wrap]="false" [touch]="true" [interval]=500000 (itemChange)="onItemChange($event)">
+    <c-carousel [dark]="false" [wrap]="true" [touch]="true" [interval]="5000" (itemChange)="onItemChange($event)">
         <c-carousel-indicators></c-carousel-indicators>
-
         <div class="position-carousel">
             <c-carousel-inner class="left">
-                <c-carousel-item *ngFor="let slide of slides; let i = index;">
+                <c-carousel-item *ngFor="let slide of slides; let i = index; trackBy: trackByFunction0 ">
                     <img [src]="slides[(i - 1 + slides.length) % slides.length]?.src"
                         alt="{{slides[(i - 1 + slides.length) % slides.length]?.title}}"
                         class="d-block w-100 img-carousel" loading="eager" />
                 </c-carousel-item>
             </c-carousel-inner>
-
             <c-carousel-control class="previous" [routerLink] caption="Previous" direction="prev"></c-carousel-control>
-
             <c-carousel-inner class="center">
-                <c-carousel-item *ngFor="let slide of slides; let i = index;" (click)="openMovie()">
-
+                <c-carousel-item *ngFor="let slide of slides; let i = index; trackBy: trackByFunction1"
+                    (click)="openMovie()">
                     <img [src]="slide.src" alt="{{slide.title}}" class="d-block w-100 img-carousel" loading="eager" />
                     <c-carousel-caption class="d-none d-md-block">
                         <h1>{{slide.title}}</h1>
                         <p>{{slide.subtitle}}</p>
-
                     </c-carousel-caption>
                 </c-carousel-item>
-
             </c-carousel-inner>
-
             <c-carousel-control class="next" [routerLink] caption="Next" direction="next"></c-carousel-control>
-
             <c-carousel-inner class="right">
-                <c-carousel-item *ngFor="let slide of slides; let i = index;">
+                <c-carousel-item *ngFor="let slide of slides; let i = index;  trackBy: trackByFunction2">
                     <img [src]="slides[(i + 1) % slides.length]?.src" alt="{{slides[(i + 1) % slides.length]?.title}}"
                         class="d-block w-100 img-carousel" loading="eager" />
                 </c-carousel-item>
