--- a/src/app/templates/header/dialog/delete-account.html
+++ b/src/app/templates/header/dialog/delete-account.html
@@ -2,13 +2,9 @@
   <h2 mat-dialog-title>Account Löschen</h2>
   <div mat-dialog-content>
     Bist du sicher das dein Account gelöscht werden soll??
-
-
-
-
   </div>
   <div mat-dialog-actions align="center">
     <button mat-button mat-dialog-close>Abbrechen</button>
-    <button mat-button cdkFocusInitial>Löschen</button>
+    <button mat-button (click)="deleteAccount()" mat-dialog-close>Löschen</button>
   </div>
 </div>
