--- a/src/app/templates/header/dialog/dialog.style.scss
+++ b/src/app/templates/header/dialog/dialog.style.scss
@@ -35,4 +35,52 @@ mat-slide-toggle {
 }
 h2 {
   margin-top: 20px;
+  padding-left: 0;
+}
+
+.file-upload {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  p {
+    margin: 0;
+    margin-left: 20px;
+  }
+}
+
+.headline-profil {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  img {
+    cursor: pointer;
+    height: 100px;
+    width: 100px;
+    object-fit: cover;
+    border-radius: 100%;
+    margin-right: 25px;
+    margin-top: 25px;
+  }
+}
+.mat-dialog-content {
+  padding: 0;
+  margin: 0;
+}
+.konto-account {
+  padding: 25px;
+  h3 {
+    width: 100%;
+    text-align: left;
+  }
+  i {
+    font-size: 12px;
+    color: #c2185b;
+  }
+}
+
+.buton-bottom {
+  margin-top: 25px;
 }
