--- a/src/app/templates/header/header.component.html
+++ b/src/app/templates/header/header.component.html
@@ -54,16 +54,16 @@
     <div class="profil">
         <button (click)="btnUpload('upload')" mat-stroked-button>Upload</button>
         <span>{{name}}</span>
-        <img src="/assets/img/woman-995164_640.png" alt="" [matMenuTriggerFor]="menu_profile">
+        <img src="{{avatar_path}}" alt="profil" [matMenuTriggerFor]="menu_profile">
         <mat-menu #menu_profile="matMenu">
             <div class="profil-name">
                 <p><b>{{name}}</b></p>
             </div>
+            <button mat-menu-item>Meine Videos</button>
             <button mat-menu-item (click)="openDialogProfil('0ms', '0ms')"> Profil bearbeiten</button>
             <button mat-menu-item (click)="openDialogKonto('0ms', '0ms')">Konto</button>
             <button mat-menu-item (click)="menuLogout()">Logout</button>
             <button mat-menu-item (click)="openDialogDelete('0ms', '0ms')">Konto Löschen</button>
         </mat-menu>
     </div>
-
 </div>
