--- a/src/app/templates/header/header.component.scss
+++ b/src/app/templates/header/header.component.scss
@@ -33,17 +33,18 @@
   color: white;
   display: flex;
   justify-content: first baseline;
-  @media (max-width: 1000px), (max-height: 600px) {
+  @media (max-width: 1050px), (max-height: 600px) {
     display: none;
   }
 }
 
 .menu-small {
   display: none;
-  @media (max-width: 1000px), (max-height: 600px) {
+  @media (max-width: 1050px), (max-height: 600px) {
     color: white;
     display: flex;
-    justify-content: center;
+    width: 100%;
+    justify-content: left;
   }
 }
 
@@ -59,8 +60,11 @@ a {
   justify-content: flex-end;
   align-items: center;
   img {
+    margin-left: 15px;
     margin-right: 15px;
     height: 52px;
+    width: 52px;
+    object-fit: cover;
     border-radius: 100%;
     background-color: #333333;
     &:hover {
@@ -68,7 +72,10 @@ a {
     }
   }
   span {
+    text-align: center;
+    width: 50px;
     margin-left: 15px;
+    margin-right: 15px;
   }
   @media (max-width: 600px) {
     span {
