--- a/src/app/content/home/home.component.html
+++ b/src/app/content/home/home.component.html
@@ -1,5 +1,7 @@
 <app-header></app-header>
-<app-slideshow></app-slideshow>
-<app-category-header></app-category-header>
-<app-category-content></app-category-content>
+<div class="content">
+    <app-slideshow></app-slideshow>
+    <app-category-header></app-category-header>
+    <app-category-content></app-category-content>
+</div>
 <app-footer></app-footer>
