--- a/src/app/content/knowledge/knowledge.component.scss
+++ b/src/app/content/knowledge/knowledge.component.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   margin-top: 35px;
   max-width: 100%;
+  flex: 1;
   h1 {
     margin-left: 5%;
   }
@@ -81,4 +82,10 @@
     border-radius: 10px;
     border: 3px solid transparent;
   }
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; /* Mindesthöhe des Containers auf 100% der Bildschirmhöhe setzen */
 }
