--- a/src/app/content/serch/serch.component.scss
+++ b/src/app/content/serch/serch.component.scss
@@ -1,5 +1,4 @@
 .example-form {
-  flex: 1; /* Flex-Grow auf 1, um den Hauptinhalt zu strecken */
   margin-top: 15px;
   max-width: 100%;
 }
@@ -11,6 +10,7 @@
 }
 
 .content {
+  flex: 1;
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
@@ -93,4 +93,19 @@
     border-radius: 10px;
     border: 3px solid transparent;
   }
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; /* Mindesthöhe des Containers auf 100% der Bildschirmhöhe setzen */
+}
+
+.noFound {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 35px;
+  max-width: 100%;
+  flex: 1;
 }
