--- a/src/app/content/series/series.component.html
+++ b/src/app/content/series/series.component.html
@@ -1,14 +1,15 @@
-<app-header></app-header>
+<div class="wrapper"><app-header></app-header>
 
-<div class="content">
-    <h1>Serien</h1>
-    <div class="content-boxing ">
-        <div class="content-draggable" id="content-box">
-            <div *ngFor="let single of data" class="content-box">
-                <a href="/single-view/?select={{single.random_key}}"><img src="{{single.cover}}" alt=""></a>
+    <div class="content">
+        <h1>Serien</h1>
+        <div class="content-boxing ">
+            <div class="content-draggable" id="content-box">
+                <div *ngFor="let single of data" class="content-box">
+                    <a href="/single-view/?select={{single.random_key}}"><img src="{{single.cover}}" alt=""></a>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-<app-footer></app-footer>
+    <app-footer></app-footer>
+</div>
