--- a/src/app/content/single-view/single-view.component.html
+++ b/src/app/content/single-view/single-view.component.html
@@ -1,10 +1,18 @@
 <app-header></app-header>
 <div class="single-view-img">
     <img src="{{data.big_picture}}" alt="">
-
     <div class="single-view-content">
 
-        <h1>{{data.movie_name}}</h1>
+        <div class="header-line">
+            <h1>{{data.movie_name}}</h1>
+            <div class="video-box">
+                <video id="video" class="video" controls #videoPlayer>
+                    <source src="{{data.video}}" type="video/mp4" />
+                    Browser not supported
+                </video>
+            </div>
+        </div>
+
 
         <div class="small-info">
             <mat-chip>
@@ -17,9 +25,10 @@
             <p><i>{{data.genre}}</i></p>
         </div>
         <div class="button">
-            <button mat-fab extended color="accent">
+            <button mat-fab extended color="accent" (click)="toggleVideo()">
                 <mat-icon>play_circle</mat-icon>
                 Abspielen
+
             </button>
             <button mat-fab matTooltip="Primary" color="primary" aria-label="Example fab with a heart icon">
                 <mat-icon>add</mat-icon>
@@ -30,6 +39,7 @@
             </button>
         </div>
         <span>{{data.description_short}}</span>
+
 
     </div>
 </div>
