--- a/src/app/content/watchlist/watchlist.component.html
+++ b/src/app/content/watchlist/watchlist.component.html
@@ -1,35 +1,37 @@
-<app-header></app-header>
+<div class="wrapper">
+    <app-header></app-header>
 
-<div class="content">
-    <h1>Weiterschauen</h1>
-    <div class="content-boxing ">
-        <div class="content-draggable" id="content-box">
-            <div class="content-box">
-                <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
-            </div>
-            <div class="content-box">
-                <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
-            </div>
-            <div class="content-box">
-                <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
-            </div>
-            <div class="content-box">
-                <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
-            </div>
-            <div class="content-box">
-                <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
-            </div>
-            <div class="content-box">
-                <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
-            </div>
-            <div class="content-box">
-                <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
-            </div>
-            <div class="content-box">
-                <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
+    <div class="content">
+        <h1>Weiterschauen</h1>
+        <div class="content-boxing ">
+            <div class="content-draggable" id="content-box">
+                <div class="content-box">
+                    <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
+                </div>
+                <div class="content-box">
+                    <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
+                </div>
+                <div class="content-box">
+                    <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
+                </div>
+                <div class="content-box">
+                    <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
+                </div>
+                <div class="content-box">
+                    <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
+                </div>
+                <div class="content-box">
+                    <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
+                </div>
+                <div class="content-box">
+                    <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
+                </div>
+                <div class="content-box">
+                    <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-<app-footer></app-footer>
+    <app-footer></app-footer>
+</div>
